# VoyagerSP-Android

./: .gitignore  CREDITS.md  README.md  autoexec_clean.cfg
EFAndroid-SP/app/: build.gradle  debug.keystore
EFAndroid-SP/app/jni/: CMakeLists.txt
EFAndroid-SP/app/jni/efcode/botlib/: be_ai_chat.c  be_ai_goal.c  l_log.c
EFAndroid-SP/app/jni/efcode/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  snd_dma.c  snd_local.h  snd_main.c  snd_public.h  touch_controls.h
EFAndroid-SP/app/jni/efcode/null/: null_input.c
EFAndroid-SP/app/jni/efcode/qcommon/: files.c  ioapi.c  net_ip.c  q_shared.h  qcommon.h  qfiles.h  vm.c  vm_aarch64.c
EFAndroid-SP/app/jni/efcode/renderercommon/: tr_common.h  tr_public.h
EFAndroid-SP/app/jni/efcode/renderervk/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_model.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_surface.c  vk.c  vk.h
EFAndroid-SP/app/jni/efcode/renderervk/shaders/: bin2hex.py  gen_vert.tmpl
EFAndroid-SP/app/jni/efcode/renderervk/shaders/spirv/: shader_data.c
EFAndroid-SP/app/jni/efcode/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_input.c
EFAndroid-SP/app/jni/efcode/server/: sv_ccmds.c  sv_client.c  sv_game.c  sv_main.c  sv_snapshot.c
EFAndroid-SP/app/jni/efcode/sys/: con_passive.c  con_tty.c  con_win32.c  sys_main.c  sys_unix.c  sys_win32.c
EFAndroid-SP/app/jni/ffmpeg/include/libavutil/: ffversion.h
EFAndroid-SP/app/jni/sp/: bink_ff.c  bink_ff.h  sp_bridge.cpp  sp_clink.c  sp_integration.c  sp_render.h  sp_ui.h  sp_ui_bridge.cpp
EFAndroid-SP/app/jni/src/: CMakeLists.txt
EFAndroid-SP/app/src/main/: AndroidManifest.xml
EFAndroid-SP/app/src/main/assets/baseEF/: android_defaults.cfg  autoexec.cfg
EFAndroid-SP/app/src/main/assets/baseEF/vm/: ui.qvm
EFAndroid-SP/app/src/main/java/com/voyager/ef/: EFActivity.java  ImportActivity.java
EFAndroid-SP/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
EFAndroid-SP/app/src/main/res/values/: strings.xml
EFAndroid-SP/app/src/main/res/values-v28/: styles.xml
EFAndroid-SP/gradle/wrapper/: gradle-wrapper.properties
efgame/: CMakeLists.txt  README.md
efgame/android/: conio.h  direct.h  ef_android_compat.h  efgame.ver  efui.ver  windows.h
efgame/src/cgame/: FX_Grenade_Launcher.cpp  FX_Memory.cpp  FX_Public.h  FX_Stasis.cpp  FX_Util.cpp  FX_Vohrsoth.cpp  FX_avatar.cpp  cg_camera.cpp  cg_camera.h  cg_draw.cpp  cg_drawtools.cpp  cg_effects.cpp  cg_ents.cpp  cg_env.cpp  cg_event.cpp  cg_info.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_players.cpp  cg_public.h  cg_scoreboard.cpp  cg_servercmds.cpp  cg_text.cpp  cg_view.cpp  cg_weapons.cpp  fx_borg.cpp  fx_dreadnought.cpp  fx_hunter_seeker.cpp  fx_imod.cpp  fx_lib.cpp  fx_parasite.cpp  fx_quantum.cpp  fx_reaver.cpp  fx_scavenger.cpp  fx_scout_bot.cpp  fx_tetrion.cpp  fx_transporter.cpp
efgame/src/game/: G_Timer.cpp  NPC_formation.cpp  NPC_spawn.cpp  NPC_stats.cpp  Q3_Interface.cpp  bg_misc.cpp  fields.h  g_ICARUS.cpp  g_active.cpp  g_ambients.cpp  g_boltons.cpp  g_camera.cpp  g_client.cpp  g_combat.cpp  g_functions.cpp  g_functions.h  g_infostrings.h  g_itemLoad.cpp  g_items.cpp  g_local.h  g_main.cpp  g_mem.cpp  g_navigator.cpp  g_navigator.h  g_objectives.cpp  g_ref.cpp  g_roff.h  g_savegame.cpp  g_savetranscode.cpp  g_shared.h  g_spawn.cpp  g_svcmds.cpp  g_target.cpp  g_trigger.cpp  g_utils.cpp  g_weapon.cpp  q_math.cpp
efgame/src/icarus/: BlockStream.cpp  Instance.cpp  Interface.cpp  Interpreter.cpp  Sequence.cpp  Sequencer.cpp  TaskManager.cpp  Tokenizer.cpp  blockstream.h  icarus.h  instance.h  sequence.h  sequencer.h  taskmanager.h
efgame/src/speedrun/: sound_skipping.cpp
efgame/src/ui/: gameinfo.cpp  ui_atoms.cpp  ui_controls2.cpp  ui_cvars.cpp  ui_field.cpp  ui_game.cpp  ui_local.h  ui_players.cpp  ui_video.cpp
engine-sp/: CMakeLists.txt  host_sp_test  host_sp_test.cpp  sp_bridge.cpp  sp_headless_main.c  sp_stubs.c
engine-sp/engine-shared/client/: client.h  touch_controls.h
engine-sp/engine-shared/qcommon/: cmd.c  common.c  cvar.c  q_shared.c  q_shared.h  qcommon.h  vm_local.h
engine-sp/engine-shared/renderercommon/: qgl.h  tr_public.h
engine-sp/engine-shared/renderervk/: tr_backend.c  tr_cmds.c  tr_init.c  tr_light.c  tr_local.h  tr_shade_calc.c  tr_shader.c  vk.c  vk.h  vk_compat.c
engine-sp/engine-shared/sdl/: sdl_glimp.c  sdl_input.c
engine-sp/engine-shared/sys/: con_passive.c  sys_loadlib.h  sys_local.h  sys_main.c  sys_unix.c
